fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ h1 {
     text-align: center;
     line-height: 50px; 
     background-color: rgb(226, 226, 226); 
+    transition: all .06s ease;
 }
 
 .btn:hover {
@@ -48,6 +49,7 @@ h1 {
     font-size: 2em;
     text-align: right;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow:auto;
 }
 
 .keypad {
@@ -79,4 +81,8 @@ footer {
 .highlight {
     background-color: lightblue; /*basic effect for "active" operator*/
     box-shadow: inset 0 0 10px grey; 
+}
+
+.error {
+    background-color: red;
 }
